--- a/css3/basic-css-selectors/index.html
+++ b/css3/basic-css-selectors/index.html
@@ -24,7 +24,15 @@
     color: red;
 }</code></pre>
             </li>
-            <li>Class</li>
+            <li>
+                <header class="css-property title">Class</header>
+                <div class="css-element">
+                    <p class="align-center">Este texto está centrado.</p>
+                </div>
+                <pre><code class="html">&lt;p class=&quot;align-center&quot;&gt;Este texto est&aacute; centrado.&lt;/p&gt;</code><code class="css">.align-center {
+    text-align: center;
+}</code></pre>
+            </li>
             <li>ID</li>
             <li>Universal</li>
             <li>Attribute</li>
