ID code example

--- a/css3/basic-css-selectors/index.html
+++ b/css3/basic-css-selectors/index.html
@@ -33,7 +33,17 @@
     text-align: center;
 }</code></pre>
             </li>
-            <li>ID</li>
+            <li>
+                <header class="css-property title">ID</header>
+                <div class="css-element">
+                    <div id="modal">Este es un modal.</div>
+                </div>
+                <pre><code class="html">&lt;div id=&quot;modal&quot;&gt;Este es un modal.&lt;/div&gt;</code><code class="css">#modal {
+    background-color: red;
+    color: white;
+    padding: 40px;
+}</code></pre>
+            </li>
             <li>Universal</li>
             <li>Attribute</li>
         </ul>
