--- a/css3/basic-css-selectors/index.html
+++ b/css3/basic-css-selectors/index.html
@@ -44,7 +44,13 @@
     padding: 40px;
 }</code></pre>
             </li>
-            <li>Universal</li>
+            <li>
+                <header class="css-property title">Universal</header>
+                <p>Este tipo de selector es usado para seleccionar todos los elementos.</p>
+                <pre><code class="css">* {
+    margin: 0;
+}</code></pre>
+            </li>
             <li>Attribute</li>
         </ul>
     </section>
