Attribute code example

--- a/css3/basic-css-selectors/index.html
+++ b/css3/basic-css-selectors/index.html
@@ -51,7 +51,16 @@
     margin: 0;
 }</code></pre>
             </li>
-            <li>Attribute</li>
+            <li>
+                <header class="css-property title">Attribute</header>
+                <div class="css-element">
+                    <input type="text">
+                </div>
+                <pre><code class="html">&lt;input type=&quot;text&quot;&gt;</code><code class="css">[type="text"] {
+    background-color: blue;
+    color: white;
+}</code></pre>
+            </li>
         </ul>
     </section>
     <section>
